--- a/info/templates/meet_the_team.html
+++ b/info/templates/meet_the_team.html
@@ -2,19 +2,69 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-{% for team in teams %}
-  <div>
-    <h2>{{ team.full_name }}</h2>
-    <p>{{ team.about }}</p>
-    <img src="{{ team.image.url }}" alt="{{ team.full_name }}" width="200">
-  </div>
-{% endfor %}
+    {% for team in teams %}
+        <div class="overlay"></div>
+            <div class="container-fluid">
+                <div class="row mb-5 mt-5">
+                    <div class="col text-center mt-3">
+                        <h2 class="logo-font">Meet the Team</h2>
+                        <hr class="w-50 mb-1">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="product-container col-10 offset-1">
+                        <div class="row">
+                            {% for team in teams %}
+                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                                <div class="card h-100 border-0 product-card">
+                                    {% if team.image %}
+                                    <img class="card-img-top img-fluid" src="{{ team.image.url }}" alt="{{ team.full_name }}">
+                                    {% else %}
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}no-image.jpg"
+                                        alt="{{ team.full_name }}">
+                                    {% endif %}
+                                    <div class="card-body pb-0 product-card">
+                                        <h3 class="mb-2 logo-font">{{ team.full_name }}</h3>
+                                        <h4 class="mb-2 logo-font">{{ team.role }}</h4>
+                                    </div>
+                                    <div class="card-footer pt-0 border-0 text-left">
+                                        {{ team.about }}
+                                    </div>
+                                </div>
+                                {% if forloop.counter|divisibleby:1 %}
+                                <div class="col-12 d-sm-none mb-5">
+                                    <hr>
+                                </div>
+                                {% endif %}
+                                {% if forloop.counter|divisibleby:2 %}
+                                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                    <hr>
+                                </div>
+                                {% endif %}
+                                {% if forloop.counter|divisibleby:3 %}
+                                <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                    <hr>
+                                </div>
+                                {% endif %}
+                                {% if forloop.counter|divisibleby:4 %}
+                                <div class="col-12 d-none d-xl-block mb-5">
+                                    <hr>
+                                </div>
+                                {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
