--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -80,12 +80,18 @@
                                             </div>
                                             {% endif %}
                                             <div class="product-card-block product-card-block-red">
-                                            {% if product.spice_rating %}
-                                                <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.spice_rating }} / 5</small>
-                                            {% else %}
-                                                <small class="text-white">No Rating</small>
-                                            {% endif %}
-                                        </div>
+                                                {% if product.spice_rating %}
+                                                    <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.spice_rating }} / 5</small>
+                                                {% else %}
+                                                    <small class="text-white">No Rating</small>
+                                                {% endif %}
+                                            </div>
+                                                {% if request.user.is_superuser %}
+                                                    <small class="ml-3">
+                                                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                                    </small>
+                                                {% endif %}
                                         </div>
                                     </div>
                                 </div>
