--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,7 +21,7 @@ body {
 }
 
 .hero-background {
-    background: url('/media/hero.jpg') no-repeat center center fixed;
+    background: url('/media/hero-vid.mov') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
