--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 :root {
     --main-color: #cce293;
-    --main-color-red: #40724e;
+    --main-color-red: #509bb9;
     --text-main: #1B365C;
     --block-main: #b7c2ec;
   }
