--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,10 @@
     ;
   }
 
+p {
+    font-family: 'Comfortaa', cursive;
+}
+
 html {
     height: 100%;
 }
@@ -60,7 +64,7 @@ body {
 }
 
 .logo-font {
-    font-family: 'Mansalva', cursive;
+    font-family: 'Paytone One', sans-serif;
 }
 
 .main-logo-link {
