--- a/static/css/base.css
+++ b/static/css/base.css
@@ -367,4 +367,22 @@ footer {
     body {
         height: calc(100vh - 116px);
     }
+
+    .display-4.logo-font.text-white {
+        font-size: 2rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem
+    }
+
 }
