--- a/static/css/base.css
+++ b/static/css/base.css
@@ -385,4 +385,18 @@ footer {
         font-size: .9rem
     }
 
+    .btn.btn-outline.rounded-0,
+    .btn.btn-red.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline.rounded-0.btn-lg,
+    .btn.btn-red.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qy {
+        padding: .25rem .5rem !important;
+    }
 }
