--- a/templates/base.html
+++ b/templates/base.html
@@ -48,8 +48,8 @@
 		<header class="container-fluid fixed-top">
 			<div id="topnav" class="row top-nav pt-lg-2 d-none d-lg-flex">
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-					<a href="{% url 'home' %}" class="nav-link main-logo-link" height="40px" width="40px">
-						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo">
+					<a href="{% url 'home' %}" class="nav-link main-logo-link">
+						<img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo" height="80px" width="80px">
 					</a>
 				</div>
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -115,8 +115,8 @@
 				</nav>
 			</div>
 			<div id="deliver-banner" class="row text-center">
-				<div class="col block-main text-main">
-					<h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}</h4>
+				<div class="col block-main">
+					<h4 class="logo-font my-1 text-main">Free delivery on orders over £{{ free_delivery_threshold }}</h4>
 				</div>
 			</div>
 
