--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -17,7 +17,7 @@
                 <div class="col-lg-2 col-md-6">
                     <h5 class="logo-font mb-3" >Events</h5>
                     <ul class="list-unstyled text-main">
-                        <li><a href="{% url 'book_event' %}" class="text-main">Book an Event</a></li>
+                        <li><a href="#" class="text-main">Book an Event</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
