--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,8 +32,8 @@
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                                 <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="spice_asc" {% if current_sorting == 'spice_asc' %}selected{% endif %}>Spice Rating (low to high)</option>
-                                <option value="spice_desc" {% if current_sorting == 'spice_desc' %}selected{% endif %}>Spice Rating (high to low)</option>
+                                <option value="spice_rating_asc" {% if current_sorting == 'spice_rating_asc' %}selected{% endif %}>Spice Rating (low to high)</option>
+                                <option value="spice_rating_desc" {% if current_sorting == 'spice_rating_desc' %}selected{% endif %}>Spice Rating (high to low)</option>
                                 <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
                                 <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
                                 <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
@@ -80,8 +80,8 @@
                                             </div>
                                             {% endif %}
                                             <div class="product-card-block product-card-block-red">
-                                                {% if product.spice %}
-                                                    <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.spice }} / 5</small>
+                                                {% if product.spice_rating %}
+                                                    <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.spice_rating }} / 5</small>
                                                 {% else %}
                                                     <small class="text-white">No Rating</small>
                                                 {% endif %}
