--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -39,14 +39,14 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-12 col-sm-6">
-                            {% include 'bag/product-image.html %}
+                            {% include 'bag/product-image.html' %}
                         </div>
                         <div class="col-12 col-sm-6">
-                            {% include 'bag/product-info.html %}
+                            {% include 'bag/product-info.html' %}
                         </div>
                         <div class="col-12 col-sm-6 order-sm-last">
                             <p class="my-0">Price Each: £{{ item.product.price }}</p>
-                            <p><strong>Subtotal:</strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </div>
                         <div class="col-12 col-sm-6">
                             {% include 'bag/quantity-form.html %}
