--- a/templates/base.html
+++ b/templates/base.html
@@ -55,8 +55,8 @@
 				<div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
 					<form method="GET" action="{% url 'products' %}">
 						<div class="input-group w-100">
-							<label for="search"></label>
-							<input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+							<label for="search" class="hidden">Search:</label>
+							<input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" id="search">
 							<div class="input-group-append">
 								<button class="form-control btn btn-red border border-black rounded-0" type="submit" aria-label="Search">
 									<span class="icon-dark">
