--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,24 +4,24 @@
         <div class="container py-4">
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
-                    <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo" height="80px" width="80px" alt="taco-y-tequila logo>
+                    <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.png" class="my-0 logo" height="80px" width="80px" alt="taco-y-tequila logo">
                     <p class="small text-main mb-0">&copy; Copyrights. All rights reserved. Taco y Tequila</p>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="logo-font mb-3">About Us</h5>
+                    <p class="logo-font mb-3">About Us</p>
                     <ul class="list-unstyled text-main">
                         <li><a href="{% url 'how_we_started' %}" class="text-main">How we started</a></li>
                         <li><a href="{% url 'meet_the_team' %}" class="text-main">Meet the team</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h3 class="logo-font mb-3" >Events</h3>
+                    <p class="logo-font mb-3" >Events</p>
                     <ul class="list-unstyled text-main">
                         <li><a href="{% url 'book_event' %}"" class="text-main">Book an Event</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="logo-font mb-3">Newsletter</h5>
+                    <p class="logo-font mb-3">Newsletter</p>
                     <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y Tequila related</p>
                     <form action="#">
                         <div class="input-group mb-3">
