--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,6 +33,10 @@ body {
     width: 80px;
 }
 
+.dark-green-block {
+    background-color: var(--main-color-red);
+}
+
 .bg-main {
     background-color: var(--block-main);
 }
@@ -42,7 +46,7 @@ body {
 }
 
 .bg-red {
-    background-color: var(--main-color-red) !important;
+    background-color: var(--main-color) !important;
 }
 
 .home-page-box {
