--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,12 @@ body {
     background-color: var(--main-color);
 }
 
+/* NavBar */
+
+.nav {
+    height: 10vh;
+}
+
 .hero-background {
     background: url('/media/hero.webp') no-repeat center center fixed;
     background-size: cover;
@@ -368,7 +374,7 @@ footer {
     }
 }
 
-/* top padding for when navbar is collapsed */
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
@@ -378,8 +384,12 @@ footer {
         height: calc(100vh - 116px);
     }
 
-    .display-4.logo-font.text-white {
+    .display-4.logo-font.text-black {
         font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
     }
 
     .nav-link i.fa-lg {
@@ -388,30 +398,25 @@ footer {
 
     .navbar-toggler {
         padding: .6rem .6rem;
-        font-size: 1rem
+        font-size: 1rem;
     }
 
     #delivery-banner h4 {
-        font-size: .9rem
+        font-size: .9rem;
     }
 
-    .btn.btn-outline.rounded-0,
-    .btn.btn-red.rounded-0 {
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
         padding: .375rem .375rem;
     }
 
-    .btn.btn-outline.rounded-0.btn-lg,
-    .btn.btn-red.rounded-0.btn-lg {
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
         padding: .375rem .375rem;
         font-size: .75rem;
     }
 
-    .increment-qty, .decrement-qy {
+    .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
-
-    .home-page-box h1 {
-        font-size: .8rem;
-    }
-
 }
