--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,12 +1,12 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item d-block d-md-none">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -18,7 +18,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="meal-kits-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="meal-kits-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Meal Kits
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="meal-kits-link">
@@ -31,7 +31,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="drinks-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="drinks-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Drinks
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="drinks-link">
@@ -43,7 +43,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="spices-sauces-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="#" id="spices-sauces-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Sauces &amp; Spices
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="spices-sauces-link">
@@ -53,7 +53,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'book_event' %}" id="events-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-main mr-5" href="{% url 'book_event' %}" id="events-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Event's
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="events-link">
