--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -200,9 +200,9 @@
 				    	<span class="text-uppercase">Back to profile</span>
                     </a>
                 {% else %}
-				    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
+				    <a href="{% url 'book_event' %}" class="btn btn-black rounded-0 my-2">
 				    	<span class="icon mr-2">
-				    		<i class="fas fa-gifts"></i>
+				    		<i class="fa-solid fa-utensils"></i>
 				    	</span>
 				    	<span class="text-uppercase">Now check out the latest deals!</span>
 				    </a>
