--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -204,7 +204,7 @@
 				    	<span class="icon mr-2">
 				    		<i class="fa-solid fa-utensils"></i>
 				    	</span>
-				    	<span class="text-uppercase">Now check out the latest deals!</span>
+				    	<span class="text-uppercase">Now check out our events, and book us for a special occasion</span>
 				    </a>
                 {% endif %}
 			</div>
