--- a/static/css/base.css
+++ b/static/css/base.css
@@ -405,12 +405,12 @@ footer {
         font-size: .9rem;
     }
 
-    .btn.btn-outline-black.rounded-0,
+    .btn.btn-outline.rounded-0,
     .btn.btn-black.rounded-0 {
         padding: .375rem .375rem;
     }
 
-    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-outline.rounded-0.btn-lg,
     .btn.btn-black.rounded-0.btn-lg {
         padding: .375rem .375rem;
         font-size: .75rem;
@@ -420,3 +420,4 @@ footer {
         padding: .25rem .5rem !important;
     }
 }
+
