--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -91,7 +91,7 @@
                          {% include 'bag/quantity-form.html' %}
                         </td>
                         <td class="py-3">
-                            <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
                     {% endfor %}
