--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -81,7 +81,7 @@
                                             {% endif %}
                                             <div class="product-card-block product-card-block-red">
                                                 {% if product.spice_rating %}
-                                                    <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i></i>{{ product.spice_rating }} / 5</small>
+                                                    <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spice_rating }} / 5</small>
                                                 {% else %}
                                                     <small class="text-white">No Rating</small>
                                                 {% endif %}
