--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,13 +32,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/media/homepage_background_cropped.jpg" alt="First slide">
+        <img class="d-block w-100" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webpp" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/media/homepage_background_cropped.jpg" alt="Second slide">
+        <img class="d-block w-100" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/media/homepage_background_cropped.jpg" alt="Third slide">
+        <img class="d-block w-100" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
